syntax = "proto3";
option java_package = "VireProtobuf.vire.cms";
option java_outer_classname = "ResourceFetchStatusSuccessStub";
package vire.cms;

import "vire/utility/BasePayload.proto";
import "vire/cms/ResourceStatusRecord.proto";

message ResourceFetchStatusSuccess {

  vire.utility.BasePayload _base = 1;

  vire.cms.ResourceStatusRecord status = 100;

}